markup, fix indentation issues, nested lists, etc.  Working from most
recent to oldest, I've edited back to release 110.46 (2004/06/17).

//////////////////////////////////////////////////////////////////////

//====================================================================
//== Recent updates

//--------------------------------------------------------------------
[2019/11/07]::
+
Fix for bug bugref:229[] (`Real.fromString` errors). This bug was
actually two unrelated issues.  The problem that `Real.toString`
returns `Real.posInf` for `0.0e123213213123213123123` has been
fixed in the `RealScan` module (`system/basis/Implementation/real-scan.sml`).
The second bug was a regression introduced in 110.93, where the
`SIGFPE` signal was specified as the result of the `into` instruction,
whereas **Linux** actually signals `SIGSEGV` for `into`.  Note that
there may be a related issue of **BSD** systems, where `SIGBUS` might
be the signal, but we need access to a test machine to verify.
+
owner:cs.uchicago.edu/~jhr[John Reppy]

//--------------------------------------------------------------------
[2019/11/07]::
+
Fix for bug bugref:230[] (segmentation fault when compiling MLton sources
with SML/NJ 64-bit).  The problem was that when a large vector was
being created, the assembly code did not correctly restore the stack
state before trying to call the runtime system to do the allocation.
+
owner:cs.uchicago.edu/~jhr[John Reppy]

//--------------------------------------------------------------------
[2019/11/04]::
+
The runtime now uses `MAP_ANON` for allocating memory on 64-bit Linux.
This change fixes a problem with versions of Linux that do not allow
access to `/dev/zero` (such as on **ChromeBooks**.
+
owner:cs.uchicago.edu/~jhr[John Reppy]

//====================================================================
== Version 110.94; 2019/10/31

//--------------------------------------------------------------------
[2019/10/23]::
+