@@ -1,0 +1,34 @@
+= Installing SML/NJ under Cygwin
+:revnumber: {version}
+:revdate: {release-date}
+:source-highlighter: pygments
+:dist-dir: https://smlnj.org/dist/working/{version}/
+:history: {dist-dir}HISTORY.html
+:release-notes: {dist-dir}{version}-README.html
+:stem: latexmath
+:source-highlighter: pygments
+
+== Introduction
+These instructions are for installing Standard ML of New Jersey
+(**SML/NJ**) in the https://cygwin.com[**Cygwin**] 32-bit environment.
+
+=== Building SML/NJ as a Unix application
+
+It is recommended that you install SML/NJ in a volume that has
+been mounted in https://www.cygwin.com/cygwin-ug-net/using-textbinary.html[**binmode**].
+
+Otherwise, just following the standard {dist-dir}install.html[instructions]
+for installing on **Unix/Linux** systems.
+
+=== Building SML/NJ as a Windows application
+
+It is possible to build **SML/NJ** using the Windows version of
+the runtime system under **Cygwin**.  To do so, you must set the
+`SMLNJ_WINDOWS_RUNTIME` shell variable:
+
+[source,shell]
+--------------
+% export SMLNJ_WINDOWS_RUNTIME
+% SMLNJ_WINDOWS_RUNTIME=1
+% config/install.sh
+--------------
